# Tcc-front-env-v3

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: deploy.yml  desktop.yml
backend/: .env.example  docker-compose.yml  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/: 001_timescaledb_hypertable.sql
backend/src/: index.ts
backend/src/lib/: queues.ts  redis.ts
backend/src/routes/: judge.ts  runs.ts
backend/src/workers/: judge.ts
docs/: agent-setup.md  architecture.md  backend-setup.md
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: globals.css  layout.tsx  page.tsx
src/app/analytics/: page.tsx
src/app/benchmark/: page.tsx
src/app/benchmark/[id]/: page.tsx
src/app/community/: page.tsx
src/app/community/[id]/: page.tsx
src/app/dashboard/: page.tsx
src/app/deploy/: page.tsx
src/app/hardware/[id]/: page.tsx
src/app/onboarding/: page.tsx
src/app/pricing/: page.tsx
src/app/simulator/: page.tsx
src/app/sobre/: page.tsx
src/app/telemetria/: page.tsx
src/components/: BenchmarkCard.tsx  FeatureGate.tsx  Footer.tsx  Navbar.tsx  UpgradeModal.tsx  UsageMeter.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx
src/lib/: api.ts  benchmarkContext.tsx  data.ts  planContext.tsx
src/types/: index.ts
